--- a/style.css
+++ b/style.css
@@ -29,11 +29,17 @@ nav {
 
 nav h1 {
     width: 30%;
-    border: solid 2px black;
-    background-color: black;
-    color: skyblue;
+    border: solid 2px rgb(255, 255, 255);
+    background-color: rgb(59, 113, 230);
+    color: rgb(0, 0, 0);
     text-align: center;
-    padding: 10px;
+    padding: 20px;
+    border-radius: 100%;
+}
+
+#nav-img {
+    width: 140px;
+    border-radius: 50%;
 }
 
 .search-bar {
@@ -194,7 +200,7 @@ nav h1 {
 
 .cart-box {
     margin-top: 24px ;
-     border: solid 2px darkblue;  
+     /* border: solid 2px darkblue;   */
     width: 20%;
     position:sticky;
     top: 0;
@@ -206,6 +212,11 @@ nav h1 {
     width: 80%;
     
     
+}
+
+#cart {
+    text-align: center;
+    font-size: 1.2rem;
 }
 
 .cartImg > img{
@@ -303,7 +314,7 @@ nav h1 {
 
 .h1billing {
     font-size: 2rem;
-    padding-top: 50px;
+    padding-top: 70px;
     float: left;
     margin-top: 50px;
     width: 100%;
@@ -317,10 +328,11 @@ nav h1 {
     padding-bottom: 50px;
     margin-top: 150px;
     display: flex;
-    border: solid blue 2px;
+    /* border: solid blue 2px; */
     justify-content: space-around;
     width:1000px;
     margin:auto;
+    margin-bottom: 165px;
     
 }
 
@@ -369,6 +381,17 @@ nav h1 {
     margin-left: 30px;
 }
 
-    
+footer {
+    margin: 40px;
+    background-color: rgb(106, 186, 240);
+    color: black;
+    margin: 0;
+    padding: 20px;
+    text-align: center;
+    font-size: 2rem;
+    position: sticky;
+    bottom: 1px;
+    width: 100%;
+}
 
 
