--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     font-family: 'Quicksand', sans-serif;
     font-family: 'Ubuntu', sans-serif;
+    background-color:beige;
 }
 
 
@@ -29,12 +30,13 @@ nav {
 
 nav h1 {
     width: 30%;
-    border: solid 2px rgb(255, 255, 255);
-    background-color: rgb(231, 38, 38);
-    color: rgb(0, 0, 0);
+    border: solid 2px rgb(22, 1, 1);
+    background-color: rgb(0, 14, 143);
+    color: rgb(230, 226, 2);
     text-align: center;
     padding: 20px;
-    border-radius: 100%;
+    border-radius: 10%;
+    margin-left: 70px;
 }
 
 #nav-img {
@@ -112,6 +114,7 @@ nav h1 {
     border: solid darkblue 2px;
     padding: 10px;
     margin: 10px;
+    margin-bottom: 70px;
 }
 
 .menu-img, .cart-box-img {
@@ -124,7 +127,7 @@ nav h1 {
 }
 
 .menu-img:hover {
-    transform: scale(1.2);
+    transform: scale(1.01);
 }
 .name-pizza {
     font-weight: bold ;
@@ -154,6 +157,10 @@ nav h1 {
     background-color: rgb(106, 186, 240);
     font-size: 1.2rem;
     margin-left: 25px;
+}
+
+.cart-btn:hover {
+    background-color: beige;
 }
 /* body */
 
@@ -387,10 +394,11 @@ footer {
     color: black;
     margin: 0;
     padding: 20px;
+    margin-top: 50px;
     text-align: center;
-    font-size: 2rem;
-    position: sticky;
-    bottom: 1px;
+    font-size: 1.2rem;
+     position: fixed;
+    bottom: 0.1px;
     width: 100%;
 }
 
